# proposal-generator

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  example_file_usage.py  example_usage.py  proposal_generator.py  pyproject.toml  run_example.py  run_proposal_generator.py
.github/workflows/: ci.yml  release.yml
docs/: API.md  DEVELOPER_GUIDE.md  README.md
sample_data/: README.md  discovery_call_transcript.txt
src/proposal_generator/: __init__.py  cli.py  models.py  output_formatter.py  proposal_generator.py  transcription_processor.py  workflow.py
tests/: conftest.py  test_cli.py  test_models.py  test_output_formatter.py  test_proposal_generator.py  test_transcription_processor.py  test_workflow.py
